tests/ui/closures/binder/disallow-const.rs
#![feature(closure_lifetime_binder)]

fn main() {
    for<const N: i32> || -> () {};
    //~^ ERROR only lifetime parameters can be used in this context
}
